Fix podcast images

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5465,7 +5465,7 @@ button.bg-lightblue:focus {
   justify-content: flex-end !important; }
 
 .justify-content-center {
-  justify-content: center !important; }
+#  justify-content: center !important; }
 
 .justify-content-between {
   justify-content: space-between !important; }
