Fix podcast images

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7360,7 +7360,7 @@ html {
 .container {
   width: 100%;
   padding-right: 15px;
-  padding-left: 15px;
+  xpadding-left: 15px;
   margin-right: auto;
   margin-left: auto; }
   @media (min-width: 576px) {
