Fix podcast images

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5464,7 +5464,7 @@ button.bg-lightblue:focus {
 .justify-content-end {
   justify-content: flex-end !important; }
 
-.justify-content-center {
+.xjustify-content-center {
   justify-content: center !important; }
 
 .justify-content-between {
