--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -6,6 +6,9 @@
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/authors-list">Authors</a>
 </li>
+<li class="nav-item">
+<a class="nav-link" href="{{site.baseurl}}/moro-and-mike/intro">Moro and Mike</a>
+</li>
 <!--
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/contact">Contact</a>
