--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -9,6 +9,9 @@
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/moro-and-mike/about">Moro and Mike</a>
 </li>
+<li class="nav-item">
+<a class="nav-link" href="{{site.baseurl}}/learning">Learning</a>
+</li>
 <!--
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/contact">Contact</a>
