--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,1 +1,2 @@
 <link rel="icon" type="image/x-icon" href="{{site.favicon | relative_url}}" />
+<link rel="icon" type="image/x-icon" href="/favicon.ico" />
