customized minima template

--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,1 +1,4 @@
 <link rel="icon" type="image/x-icon" href="{{site.favicon | relative_url}}" />
+{% if page.url=="/moro-and-mike/about" %}
+<link type="application/rss+xml" rel="alternate" title="Moro and Mike Podcast" href="/moro-and-mike/podcast.rss" />
+{% endif %}
