Added logo to header

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,8 +32,10 @@ layout: default
           </a>
         </h3>
         {%- if site.show_excerpts -%}
+        <div class="post-excerpt-with-image">
           {{ post.excerpt }}
-          <img src="{{post.image | relative_url}}" height="150px" style="float:right" />
+          <img src="{{post.image | relative_url}}" height="96px" style="float:right" />
+        </div>
         {%- endif -%}
       </li>
       {%- endfor -%}
